--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -1,11 +1,8 @@
 /* Extra small devices Phones ----------- */
 @media only screen (max-width: 768px) {
 
-	body {
-		background-image: url('NicolePic6.jpg');
-	}
 	#pagewrap {
-		max-width: auto;
+		width: 100%;
 	}
 
 	#image {
@@ -14,12 +11,15 @@
 
 	.content {
 		width: 70%;
-		padding: 3% 4%;
 		position: relative;
 	}
 
 	#sidebar {
 		width: 30%;
+	}
+
+	#Nicole {
+		width: 100%;
 	}
 
 }
@@ -29,7 +29,7 @@
 @media only screen (min-width: 768px) (max-width: 992px) {
 
 	#pagewrap {
-		max-width: auto;
+		width: 100%;
 	}
 
 	#image {
@@ -52,7 +52,7 @@
 @media only screen (min-width: 992px) (max-width: 1200px) {
 
 	#pagewrap {
-		max-width: auto;
+		width: 100%;
 	}
 
 	#image {
@@ -61,7 +61,6 @@
 
 	.content {
 		width: 70%;
-		padding: 3% 4%;
 		position: relative;
 	}
 
@@ -74,7 +73,7 @@
 @media only screen (min-width: 1200px) {
 
 	#pagewrap {
-		max-width: auto;
+		width: 100%;
 	}
 
 	#image {
@@ -83,7 +82,6 @@
 
 	.content {
 		width: 70%;
-		padding: 3% 4%;
 		position: relative;
 	}
 
